Fix Publish Forms / part 1 -- fix publish field gaps by switching them to grid. https://linear.app/statamic/issue/ST-648/publish-forms-50percent-width-field-is-stretching-the-full-width-of The problem is that we were trying to use gap in the new cp, which intruduces a lot of calculation headaches when you're trying to compose a perfect "grid"

--- a/resources/css/components/publish.css
+++ b/resources/css/components/publish.css
@@ -41,49 +41,28 @@ code.parent-url {
 }
 
 .publish-fields, .field-grid {
-    @apply flex flex-wrap gap-3 lg:gap-8;
-    --col-width: calc(100% / 12);
+    display: grid;
+    --grid-columns: 12;
+    grid-template-columns: repeat(var(--grid-columns), 1fr);
+    @apply gap-3 lg:gap-8;
+
+    aside & {
+        /* Decrease */
+        @apply gap-2;
+    }
 
     .form-group {
-        --col-span: 12;
-        flex-basis: calc(var(--col-width) * 12 - var(--spacing) * 3);
-        flex-grow: 1;
-    }
+        grid-column: span var(--col-span, var(--grid-columns));
 
-    .field-grid-item {
-        --col-span: 12;
-        flex-basis: calc(var(--col-width) * 12 - calc(var(--spacing) * 1));
-    }
-
-    .field-w-10  { --col-span: 1; }
-    .field-w-20  { --col-span: 2; }
-    .field-w-25  { --col-span: 3; }
-    .field-w-33  { --col-span: 4; }
-    .field-w-40  { --col-span: 5; }
-    .field-w-50  { --col-span: 6; }
-    .field-w-60  { --col-span: 7; }
-    .field-w-66  { --col-span: 8; }
-    .field-w-75  { --col-span: 9; }
-    .field-w-80  { --col-span: 10; }
-    .field-w-90  { --col-span: 11; }
-    .field-w-100 { --col-span: 12; }
-
-    [data-cards-wrap="fields"] & {
-        @apply gap-1;
-        .form-group, .field-grid-item {
-            flex-basis: calc(var(--col-width) * 12 - calc(var(--spacing) * 1));
+        @variant lg {
+            &.field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
+            &.field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
+            &.field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
+            &.field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
+            &.field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
+            &.field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
+            &.field-w-undefined { --col-span: calc(var(--grid-columns) * 1); }
         }
-    }
-}
-
-@variant lg {
-    .publish-fields .form-group {
-        flex-basis: calc(var(--col-width) * var(--col-span) - calc(var(--spacing) * 8));
-    }
-
-    .field-grid .field-grid-item,
-    [data-cards-wrap="fields"] .publish-fields .form-group {
-        flex-basis: calc(var(--col-width) * var(--col-span) - calc(var(--spacing) * 1));
     }
 }
 
